--- a/css/yeser.css
+++ b/css/yeser.css
@@ -38871,7 +38871,7 @@ article .h1,article .h2,article .h3,article .h4,article .h5,article .h6,article 
 }
 .bg-section-top{
     /* height: 640px; */
-    background-image: url('../images/02.png') ;
+    background-image: url('../images/02.webp') ;
     background-position: top center;
     background-repeat: no-repeat;
     background-size: 1920px;
